JSAI/error/src/test/resources/base/methods_a015.js

var foo = function(x, y) {return x+y;}
print(foo.length);

